# canban

./: .cursorules  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
assets/screenshots/: README.md
src/: app.rs  cli.rs  config.rs  event.rs  main.rs  vim.rs
src/model/: board.rs  column.rs  mod.rs  task.rs
src/storage/: csv_backend.rs  json_backend.rs  mod.rs
src/ui/: board.rs  card.rs  dialog.rs  help.rs  mod.rs  splash.rs  theme.rs
