[package]
name = "canban"
version = "0.1.0"
edition = "2021"
description = "A terminal Kanban board application with vim bindings"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
