[package]
name = "canban"
version = "0.1.0"
edition = "2024"
description = "A fast, minimal Kanban board for the terminal with vim keybindings"
license = "MIT"
repository = "https://github.com/thearnavrustagi/canban"
homepage = "https://github.com/thearnavrustagi/canban"
readme = "README.md"
keywords = ["kanban", "tui", "terminal", "vim", "productivity"]
categories = ["command-line-utilities"]
authors = ["Arnav Rustagi <arnav.rustagi@outlook.com>"]
exclude = ["assets/screenshots/*", ".cursor*", ".github/*"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
